hotfix - Side Social spacing fix

--- a/src/resources/sass/core/_base.scss
+++ b/src/resources/sass/core/_base.scss
@@ -111,3 +111,25 @@ span {
 main {
   counter-reset: section;
 }
+
+a {
+  display: inline-block;
+  text-decoration: none;
+  text-decoration-skip-ink: auto;
+  color: inherit;
+  position: relative;
+  transition: var(--transition);
+
+  &:hover,
+  &:focus {
+    color: var(--orange);
+  }
+
+  &.inline-link {
+    @include inlink-link;
+  }
+
+  &[target='_blank'] {
+    cursor: ne-resize;
+  }
+}
